[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Boss_1.png" type="Texture" id=1]
[ext_resource path="res://Src/BossOne.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "zap",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 74.4296, 73.9119 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 113.673, 105.426 )

[node name="BossOne" type="KinematicBody2D"]
position = Vector2( 0, -152.45 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "zap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="DangerZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
shape = SubResource( 7 )

[node name="ZapTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="DangerZone" to="." method="_on_DangerZone_body_entered"]
[connection signal="body_exited" from="DangerZone" to="." method="_on_DangerZone_body_exited"]
[connection signal="timeout" from="ZapTimer" to="." method="_on_ZapTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
